--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
             <div class="container container-work">
                 <h2 class="title title-work">Наши работы</h2>
                 <ul class="works__list">
-                    <li class="works__item hidden">
+                    <li class="works__item">
+
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -172,7 +173,7 @@
                             <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
                         </div>
                     </li>
-                    <li class="works__item hidden">
+                    <li class="works__item">
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -186,7 +187,7 @@
                             <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
                         </div>
                     </li>
-                    <li class="works__item hidden">
+                    <li class="works__item">
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -200,7 +201,7 @@
                             <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
                         </div>
                     </li>
-                    <li class="works__item hidden">
+                    <li class="works__item">
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -214,7 +215,7 @@
                             <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
                         </div>
                     </li>
-                    <li class="works__item hidden">
+                    <li class="works__item">
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -229,7 +230,7 @@
                             <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
                         </div>
                     </li>
-                    <li class="works__item hidden">
+                    <li class="works__item">
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -322,6 +323,9 @@
             </div>
         </footer>
     </div>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="js/slick.js"></script>
     <script src='js/scripts.js'></script>
 </body>
 </html>
