--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@
                 <h2 class="title title-work">Наши работы</h2>
                 <ul class="works__list">
                     <li class="works__item">
-
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -244,9 +243,51 @@
                             <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
                         </div>
                     </li>
+                    <li class="works__item">
+                        <img src="img/work1.png" alt="" class="works__img">
+                        <div class="works__arrow">
+                            <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Заказчик</div>
+                            <div class="works__order-text">УК "Север"</div>
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Виды работ</div>
+                            <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
+                        </div>
+                    </li>
+                    <li class="works__item">
+                        <img src="img/work1.png" alt="" class="works__img">
+                        <div class="works__arrow">
+                            <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Заказчик</div>
+                            <div class="works__order-text">УК "Север"</div>
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Виды работ</div>
+                            <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
+                        </div>
+                    </li>
+                    <li class="works__item">
+                        <img src="img/work1.png" alt="" class="works__img">
+                        <div class="works__arrow">
+                            <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">9 Заказчик</div>
+                            <div class="works__order-text">УК "Север"</div>
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Виды работ</div>
+                            <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
+                        </div>
+                    </li>
                 </ul>
                 <div class="works__btn-wrapper">
-                    <a href="" class="works__btn">Показать еще</a>
+                    <a href="" id="loadMore" class="works__btn load-more">Показать еще</a>
                 </div>
             </div>
         </section>
